  + void OnBnClickedParseButton()
  + Misc 
    + BYTE GetEscapeChar( BYTE ch );
    + CString RemoveEscapes( const char* str );

+ CClip::AddFormat

+ CClipList::AddToDB( bool bLatestTime = false, bool bShowStatus = true )

* CClipFormat frees m_hgData on destruction

* changed CCP_MainApp::SaveAllClips to CCP_MainApp::SaveCopyClips

* changed CCP_MainApp::FixTime to CClip::MakeLatestTime()


03 Sept 2
---------
* ProcessCopy - redesigned to fix the fast copy bugs.
  . The same source object is used for the description as is stored in the db.
  . Actual copying from the clipboard is (usually) not interrupted.
  + CClip - For managing a Clip (copy of the clipboard) as a single unit.
  + CCopyThread - handles copying the clipboard when the clipboard changes and
      safely communicating with the Main thread.
  + CClipboardViewer - the Clipboard Viewer window (code factored out from
      MainWnd)
  + uses AllowDuplicates (non-sequential duplicates) flag

* ProcessPaste - redesigned for delayed rendering during drag and drop and
  immediate rendering otherwise.
  + uses UpdateTimeOnPaste flag
  + uses SaveMultiPaste flag
    
* CCP_MainApp Copy and Paste Management
  + bool EnableCbCopy(bool bState); // copy clipboad when it changes
  + long SaveAllClips();  // saves all clips copied by CCopyThread
  + void ReloadTypes();   // reloads the Types Table on demand
  + void Delayed_RemoveOldEntries( UINT delay ); // based on timer
  + void RefreshView();   // refreshes the view if it is visible
  + void OnCopyCompleted( long lLastID, int count = 1 );
  + void OnPasteCompleted();
  + void SetStatus(char*) // for displaying status in the titlebar.

+ ShowPersistent: always-on-top "persistent show"
  . Toggled by double clicking the titlebar or <Ctrl>-<Space>
  + theApp.ShowPersistent( bool bVal )
  * required modification of Target window tracking system.

* Targeting the previous focus window
  + CCP_MainApp::
    + HWND m_hTargetWnd;
    + HWND TargetActiveWindow();